# WebAssembler-rs

./: Cargo.toml  ChangeLog.md  README.md  test.asm
examples/: fibonacci.rs  simple_add.rs
src/: builder.rs  lib.rs  main.rs  module.rs  ops.rs  types.rs  util.rs
